force-app/main/default/objects/Session_Time__c/Session_Time__c.object-meta.xml
<CustomObject>
    <label>Session Time</label>
    <nameField>
        <label>Session Time Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Session Time</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>