force-app/main/default/objects/Session_Time__c/fields/DurationHHMM__c.field-meta.xml
<CustomField>
    <fullName>DurationHHMM__c</fullName>
    <formula>IF(FLOOR(Duration__c / 3600)&lt;10,&quot;0&quot;,&quot;&quot;)&amp;
TEXT(FLOOR(Duration__c/ 3600))
&amp;&apos;:&apos;&amp; 
IF(MOD((Duration__c/ 60),60)&lt;10,&quot;0&quot;,&quot;&quot;)&amp;
TEXT(FLOOR(MOD((Duration__c/60) ,60)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (HH:MM)</label>
    <type>Text</type>
</CustomField>